# SortScrews

./: .gitignore  README.md  collect.py  edit.py  infer.py  patch.py  pyproject.toml  train.py
sort_screws/: __init__.py  camera.py  dataset.py  editor.py  network.py  predictor.py  trainer.py
